--- a/index.html
+++ b/index.html
@@ -152,7 +152,14 @@
                             <!-- Card Body -->
                             <div class="card-body">
                                 <div class="chart-area">
-                                    <canvas id="myAreaChart"></canvas>
+                                    <div id="myAreaChart">
+                                        <h1>Precio bitcoin</h1>
+                                        <h2>${{ bitcoinData.precio }} USD</h2>
+                                        <p>Estos datos son obtenidos de la API de @coindesk visita la página en
+                                            <a href="https://www.coindesk.com/coindesk-api">https://www.coindesk.com/coindesk-api</a>
+                                        </p>
+                                        <br><br><br>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -205,6 +212,10 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+<script src="app.js"></script>
+
+<!-- AXIOS -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
